--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,5 +1,5 @@
 .coffee-card {
-	width: 200px;
+	width: 261px;
 	height: 100%;
 	font-size: 14px;
 	position: relative;
@@ -17,8 +17,8 @@
 	margin-top: 5px;
 }
 #image {
-	width: 100%;
-	height: 120px;
+	width: 261px;
+	/* height: 120px; */
 	border-radius: 10px;
 }
 #name-price {
