--- a/src/components/CoffeeList/CoffeeList.css
+++ b/src/components/CoffeeList/CoffeeList.css
@@ -2,12 +2,13 @@
 	height: 100%;
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
-	padding: 10px 15px 15px 15px;
-	gap: 24px;
+	row-gap: 64px;
+	column-gap: 32px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1023px) {
 	.coffee-list {
 		grid-template-columns: repeat(1, 1fr);
+		row-gap: 32px;
 	}
 }
